# rust-api-tutorial-1

./: .env  Cargo.toml  README.md
migrations/2022-05-25-145710_add_users/: up.sql
src/: handlers.rs  main.rs  models.rs  schema.rs
