[package]
name = "radom-network-backend"
version = "0.1.0"
authors = ["Mike Lago <mike@radom.network>"]
edition = "2021"

[dependencies]
actix-web = "4.0.1"
actix-web-httpauth = { git = "https://github.com/actix/actix-web-httpauth" }
chrono = { version = "0.4.19", features = ["serde"] }
derive_more = "0.99.17"
diesel = { version = "1.4.8", features = ["postgres","uuidv07", "r2d2", "chrono"] }
dotenv = "0.15.0"
futures = "0.3.21"
r2d2 = "0.8.9"
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.81"
actix-service = "2.0.2"
alcoholic_jwt = "4091.0.0"
reqwest = "0.11.10"
actix-rt = "2.7.0"